...
                .frame(width: 30.0, height: 30.0)
        }
        .buttonStyle(.borderless)
        .accessibilityLabel(session.favourite ? "Remove from favourites" : "Add to favourites")
        .accessibilityHint(session.favourite ? "Removes this session from your schedule" :
                               "Adds this session to your schedule")
        .accessibilityIdentifier(session.favourite ? "remove-from-favourites" : "add-to-favourites")
    }

    private var imageName: String {
        session.favourite
            ? "person.crop.circle.fill.badge.checkmark"
            : "person.crop.circle.badge.plus"
...
